Add JVM arguments to speed startup time